fixed tag problem in swagger documentation
